# video_detection_system

./: build.sh
configs/: config.yaml
cpp_version/: CMakeLists.txt
cpp_version/src/: common.h  inference_onnx.cpp  inference_onnx.h  main.cpp  pipeline.h  postprocessor.cpp  postprocessor.h  preprocessor.cpp  preprocessor.h  video_decoder.cpp  video_decoder.h  video_encoder.cpp  video_encoder.h
python_version/: inference_onnx.py  pipeline.py  postprocessor.py  preprocessor.py  requirements.txt  run.py  video_decoder.py  video_encoder.py
scripts/: setup_cpp_deps.sh  train_export.py
